# aur-rpc

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  models.rs  tests.rs
src/rpcs/: info.rs  mod.rs  search.rs
