[package]
name = "aur-rpc"
version = "0.2.2"
edition = "2021"
description = "An async wrapper for aur RPC calls"
authors = ["trivernis <trivernis@pm.me>"]
license = "Apache-2.0"
repository = "https://github.com/trivernis/aur-rpc"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"], default-features = false }
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
tracing = "0.1.37"

[dev-dependencies.tokio]
version = "1.21.2"
features = ["macros", "rt-multi-thread"]

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
